--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native/metro-config": "^0.74.81",
     "babel-plugin-module-resolver": "^5.0.2",
     "expo": "~50.0.14",
     "expo-status-bar": "~1.11.1",
@@ -16,12 +17,14 @@
     "react": "18.2.0",
     "react-native": "0.73.6",
     "react-native-reanimated": "^3.10.0",
+    "react-native-svg-transformer": "^1.3.0",
     "react-native-web": "^0.19.10"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "@types/react": "^18.2.74",
     "@types/react-native": "^0.73.0",
+    "tailwindcss": "^3.3.2",
     "typescript": "^5.4.4"
   },
   "private": true
